# ACGuildhall

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  REFACTOR_PLAN.md  ahprices.py  ahservice.py  app.py  build_achievements.py  build_item_icons.py  build_recipes.py  config.py  db.py  docker-compose.yml  exploits.py  extensions.py  generate_news.py  grants.sql  news_ai.py  news_prompts.py  news_scheduler.py  plan.md  pyproject.toml  recipes.json  recipes.py  requirements.txt  schema.sql  soap.py  srp6.py  vendor_items.json  weapons.py  wsgi.py
data/: achievements.json  achievements.py  ahprices.py  ahservice.py  chartypes.py  db.py  exploits.py  item_icons.json  news_ai.py  professions.py  recipes.py  soap.py
deploy/: nginx.guildhall.conf
guildhall/: __init__.py  errors.py  extensions.py  security.py
guildhall/admin/: __init__.py
guildhall/auction/: __init__.py
guildhall/auth/: __init__.py
guildhall/core/: __init__.py
guildhall/downloads/: __init__.py
guildhall/forum/: __init__.py
guildhall/invites/: __init__.py
guildhall/news/: __init__.py
guildhall/roster/: __init__.py
migrations/: 001_move_to_guildhall_db.sql  002_heroic_exploits.sql
static/: auction_review.js  auctionhouse.js  style.css  wowhead.js
templates/: admin_tokens.html  auction_review.html  auctionhouse.html  base.html  chronicle.html  dashboard.html  downloads.html  error.html  forum_feed.html  forum_index.html  forum_post.html  invite_done.html  invite_register.html  invites.html  login.html  news.html  password.html  player.html  roster.html
tests/: conftest.py  test_auction_view.py  test_auth.py  test_db_lifecycle.py  test_forum.py  test_helpers.py  test_invite.py
tools/: build_achievements.py  build_item_icons.py  build_recipes.py  clear_news_cache.py  sample_prompts.py
