[project]
name = "guildhall"
version = "0.1.0"
description = "Player web panel for an AzerothCore realm (self-service password, guild forum, profession roster, auction house, AI news desk)."
requires-python = ">=3.9"

# Runtime dependencies. Pinned to a real range (not the old `Flask>=3.0`) so the
# build is reproducible: Flask 3.1 carries the Werkzeug>=3.1 / itsdangerous>=2.2
# / blinker>=1.9 floor, so they move together.
dependencies = [
    "Flask>=3.1,<3.2",
    "Werkzeug>=3.1",
    "markupsafe>=2.1",
    "mysql-connector-python>=9.0",
    "gunicorn>=21.2",
    # Standard-library replacements for the hand-rolled CSRF / auth / rate-limit
    # plumbing (Phase 2 of the standards refactor).
    "flask-wtf>=1.2",
    "flask-login>=0.6",
    "flask-limiter>=3.5",
    # AI news desk (Gemini). Optional at runtime -- without GUILDHALL_GEMINI_API_KEY
    # the desk stays dark -- but installed so the feature is available.
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

# The app runs from source (wsgi.py + the `guildhall`/`data` packages on the
# path); it is not built/installed as a wheel. Tell uv to manage only the
# dependency environment, not to build this project.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# The app (`guildhall/`) and data layer (`data/`) packages live at the project
# root; put the root on the path so tests import them without an install step.
pythonpath = ["."]
